syntax = "proto3";

//python -m grpc_tools.protoc   -I.. --python_out=. --grpc_python_out=.   ../federated.proto

service Server {
  rpc GetTransactionData (TransactionRequest) returns (TransactionReply) {}
}

message TransactionRequest {
  string name = 1;
}

message TransactionReply {
  string timestamp=1;
  string round=2;
  bytes server_state = 3;
  bytes sampled_train_data = 4;
  string clients_participated = 5;
  string broadcasted_bits = 6;
  string aggregated_bits = 7;
}
